// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimeInput renders date with no change in the input 1`] = `
<DocumentFragment>
  <div
    class="criterion-input date-input"
  >
    <div
      class="date-picker"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      />
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-item-focusable"
        >
          <input
            name="datePicker"
            type="hidden"
            value="2019/01/23"
          />
          <input
            aria-label="Test label: input-a-value"
            class="form-control input-group-inset input-group-inset-after"
            data-testid="date-input"
            type="text"
            value="2019/01/23"
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              aria-controls="clay-id-16"
              aria-expanded="false"
              aria-haspopup="dialog"
              aria-label="Test label: select-date"
              class="date-picker-dropdown-toggle btn btn-unstyled"
              data-testid="date-button"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-calendar"
                role="presentation"
              >
                <use
                  href="#calendar"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateTimeInput renders date-time with no change in the input 1`] = `
<DocumentFragment>
  <div
    class="criterion-input date-input"
  >
    <div
      class="date-picker"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      />
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-item-focusable"
        >
          <input
            name="datePicker"
            type="hidden"
            value="2019/01/23"
          />
          <input
            aria-label="Test label: input-a-value"
            class="form-control input-group-inset input-group-inset-after"
            data-testid="date-input"
            type="text"
            value="2019/01/23"
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              aria-controls="clay-id-13"
              aria-expanded="false"
              aria-haspopup="dialog"
              aria-label="Test label: select-date"
              class="date-picker-dropdown-toggle btn btn-unstyled"
              data-testid="date-button"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-calendar"
                role="presentation"
              >
                <use
                  href="#calendar"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateTimeInput renders previous date with wrong date 1`] = `
<DocumentFragment>
  <div
    class="criterion-input date-input"
  >
    <div
      class="date-picker"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      />
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-item-focusable"
        >
          <input
            name="datePicker"
            type="hidden"
            value="2019/01/23"
          />
          <input
            aria-label="Test label: input-a-value"
            class="form-control input-group-inset input-group-inset-after"
            data-testid="date-input"
            type="text"
            value="2019/01/23"
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              aria-controls="clay-id-10"
              aria-expanded="false"
              aria-haspopup="dialog"
              aria-label="Test label: select-date"
              class="date-picker-dropdown-toggle btn btn-unstyled"
              data-testid="date-button"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-calendar"
                role="presentation"
              >
                <use
                  href="#calendar"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateTimeInput renders previous date with wrong date-time 1`] = `
<DocumentFragment>
  <div
    class="criterion-input date-input"
  >
    <div
      class="date-picker"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      />
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-item-focusable"
        >
          <input
            name="datePicker"
            type="hidden"
            value="2019/01/23"
          />
          <input
            aria-label="Test label: input-a-value"
            class="form-control input-group-inset input-group-inset-after"
            data-testid="date-input"
            type="text"
            value="2019/01/23"
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              aria-controls="clay-id-4"
              aria-expanded="false"
              aria-haspopup="dialog"
              aria-label="Test label: select-date"
              class="date-picker-dropdown-toggle btn btn-unstyled"
              data-testid="date-button"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-calendar"
                role="presentation"
              >
                <use
                  href="#calendar"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateTimeInput renders type date 1`] = `
<DocumentFragment>
  <div
    class="criterion-input date-input"
  >
    <div
      class="date-picker"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      />
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-item-focusable"
        >
          <input
            name="datePicker"
            type="hidden"
            value="2019/01/23"
          />
          <input
            aria-label="Test label: input-a-value"
            class="form-control input-group-inset input-group-inset-after"
            data-testid="date-input"
            type="text"
            value="2019/01/23"
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              aria-controls="clay-id-7"
              aria-expanded="false"
              aria-haspopup="dialog"
              aria-label="Test label: select-date"
              class="date-picker-dropdown-toggle btn btn-unstyled"
              data-testid="date-button"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-calendar"
                role="presentation"
              >
                <use
                  href="#calendar"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateTimeInput renders type date-time 1`] = `
<DocumentFragment>
  <div
    class="criterion-input date-input"
  >
    <div
      class="date-picker"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      />
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-item-focusable"
        >
          <input
            name="datePicker"
            type="hidden"
            value="2019/01/23"
          />
          <input
            aria-label="Test label: input-a-value"
            class="form-control input-group-inset input-group-inset-after"
            data-testid="date-input"
            type="text"
            value="2019/01/23"
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              aria-controls="clay-id-1"
              aria-expanded="false"
              aria-haspopup="dialog"
              aria-label="Test label: select-date"
              class="date-picker-dropdown-toggle btn btn-unstyled"
              data-testid="date-button"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-calendar"
                role="presentation"
              >
                <use
                  href="#calendar"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
